--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -13,10 +13,8 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./server/tsconfig.json"]
+    "project": ["./tsconfig.json"]
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn"]
-  }
+  "rules": {}
 }
