--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --watch \"src\" --exec \"ts-node src/index.ts\" -e ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "cd .. && husky server/.husky"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
