--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --watch \"src\" --exec \"ts-node src/index.ts\" -e ts",
-    "prepare": "cd .. && husky server/.husky"
+    "husky:prepare": "cd .. && husky server/.husky",
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm run test --watch",
+    "test:staged": "npm run test --findRelatedTests"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +25,10 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2"
   }
 }
