--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.26",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
@@ -30,6 +32,7 @@
   "dependencies": {
     "@types/jest": "^29.5.12",
     "eslint-config-prettier": "^9.1.0",
+    "express": "^4.18.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2"
