--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
+    "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
     "jest": "^29.7.0",
