--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
     "jest": "^29.7.0",
+    "mongodb": "^6.5.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2"
   }
