--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -13,7 +13,8 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": ["./tsconfig.json"],
+    "tsconfigRootDir": ["./server/", "/"]
   },
   "plugins": ["@typescript-eslint"],
   "rules": {}
