--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^20.11.26",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
@@ -34,8 +37,11 @@
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "jest": "^29.7.0",
     "mongodb": "^6.5.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2"
   }
