--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"npm run start\" \"cd ../client && npm run dev\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.0",
     "@types/mongoose": "^5.11.97",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
